# ros2-mobile-robots

./: .gitignore  README.md  frames_2026-02-13_06.35.47.gv  frames_2026-02-13_06.46.50.gv  frames_2026-02-13_07.02.32.gv  frames_2026-02-13_07.28.50.gv  frames_2026-02-13_09.24.07.gv
.devcontainer/: Dockerfile  devcontainer.json
src/: frames_2026-02-13_06.33.08.gv  frames_2026-02-13_08.57.53.gv
src/butler_task_manager/: CMakeLists.txt  package.xml
src/butler_task_manager/config/: locations.yaml
src/butler_task_manager/src/: butler_task_manager.cpp  nav2_test.cpp
src/butler_task_manager/srv/: Order.srv
src/my_cpp_templates/: CMakeLists.txt  package.xml
src/my_cpp_templates/src/: basic_publisher.cpp  basic_subscriber.cpp  fake_camera_publisher.cpp  image_subscriber.cpp  qos_publisher.cpp  qos_subscriber.cpp  velocity_publisher.cpp  velocity_subscriber.cpp
src/rb1_nav2_bringup/: CMakeLists.txt  package.xml
src/rb1_nav2_bringup/config/: nav2_params.yaml
src/rb1_nav2_bringup/launch/: nav2.launch.py
src/rb1_nav2_bringup/maps/: empty.yaml
src/rb1_ros2_description/config/: rb1_controller.yaml
src/rb1_ros2_description/launch/: rb1_ros2_xacro.launch.py
src/rb1_ros2_description/xacro/: rb1_ros2_base.urdf.xacro
